   patch: Martin Topholm (reviewed)
 * Fix: could not reload configuration
   reported by: gbock
 * Feature: better RFC5575bis support, better treat as withdraw
   patch: Christoph Loibl
 * Fix: Fix issue when using peer ASN discovery
   patch: Zac Medico
 * Fix: MD5 encoding
   reported by: Adam Jacob Muller (with an initial idea for a patch)

Version 4.0.10
 * Feature: Add decoding for Mac Mobility

Version 4.0.9
 * Change: re-enabled multiple source/destination in flow
 * Fix: forward port of #845, send state down messages on peer removal
   orginal patch: Andre Kampert
 * Feature: add != test of flows
   patch by: dhammika
 * Fix: Read pipename from env file rather than using default 
   patch by: Craig Milne
 * Fix: using teardown could crash exabgp
   patch by: Matthias Wichtlhuber
 * Fix: use of label and rd with announce attributes

Version 4.0.8
 * Fix: PEP-0479

Version 4.0.7
 * Feature: added prefix for ip-reachability-tlv
   patch: Tinus Flagstad
 * Feature: forewardport #840 (RFC 7674 - Support redirect traffic to a VRF encoded as 4-octet AS)
   original patch by: Omri Matitiau
 * Fix: handling of processes when the configuration reload fails
   patch by: Malcolm Dodds
 * Fix: healthcheck, remove options.ip_setup in dynamic ip management
   patch by: Ahmet Demir
 * Fix: present unknown RD as hexadecimal string (previous representation could not be JSON parsed)
   reported by: Jitoxxx
 * Fix: fix permissions of systemd service files
   patch by: Malcolm Dodds
 * Fix: properly show connection as down in the cli
   reported by: chantra
 * Fix: JSON encoding for route-refresh
   reported by: nfz1
 * Fix: Prevent busy spinning in multiple code path (including when a peer closed the connection on us)
   reported by: chantra
 * Fix: busy spinning when the peer went away
   reported by: chantra
 * Improvement: many fix to QA code
   patch by: Vincent Bernart
 * Improvement: exit with error code 0 on SIGTERM
   reported by: Johan Guldmyr